readme file updated requirements.txt updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit version: 1.41.0
-pandas version: 2.2.3
-numpy version: 2.0.2
-PyPDF2 version: 3.0.1
-spacy version: 3.8.2
-certifi version: 2023.7.22
-geopy version: 2.4.0
+streamlit==1.41.0
+pandas==2.2.3
+numpy==2.0.2
+PyPDF2==3.0.1
+spacy==3.8.2
+certifi==2023.7.22
+geopy==2.4.0
